# scischedule

./: CLAUDE.md  Cargo.toml  Dockerfile  README.md
src/: lib.rs  main.rs
src/domain/: mod.rs  models.rs  scheduler.rs
src/repo/: mod.rs
src/service/: mod.rs
src/web/: mod.rs
static/: app.js  index.html  styles.css
tests/: api_tests.rs
