[package]
name = "scischedule"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
sled = "0.34"
indexmap = { version = "2", features = ["serde"] }
anyhow = "1"

[dev-dependencies]
pretty_assertions = "1"
http-body-util = "0.1"
tower = "0.5"
